HW-374: Fixed sticky filter jumping

--- a/css/activityFeed.css
+++ b/css/activityFeed.css
@@ -385,7 +385,13 @@
   margin-top: 2px;
 }
 #bootstrap-theme div.act-feed-panel {
+  padding-top: 47px;
   position: relative;
+}
+#bootstrap-theme div.act-feed-panel > .panel-header.affix-top {
+  position: absolute;
+  top: 0 !important;
+  width: 100% !important;
 }
 #bootstrap-theme div.act-feed-panel > .panel-header.affix {
   width: inherit;
@@ -404,8 +410,14 @@
   width: inherit;
   z-index: 5;
 }
+#bootstrap-theme .act-feed-list-group {
+  padding-top: 54px;
+  position: relative;
+}
 #bootstrap-theme .act-feed-list-group .act-list-controls.affix-top {
+  position: absolute;
   top: 0 !important;
+  width: calc(100% - 13px) !important;
 }
 #bootstrap-theme .act-feed-view-activity:not(.cc-zero-w) {
   width: 355px;
